--- a/PracticaMVC/Views/Shared/_Layout.cshtml
+++ b/PracticaMVC/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
 </head>
 <body>
     <header>
+       
+
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PracticaMVC</a>
@@ -28,6 +30,18 @@
                         <li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">LogOut</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="alumnos" asp-action="Index">Alumnos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="materias" asp-action="Index">Materias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="departamentos" asp-action="Index">Departamentos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="facultades" asp-action="Index">Facultades</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +55,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - PracticaMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <p>&copy; 2025 - L01P02NUMEROCARNET - Andrea Michelle Clímaco Alvarenga</p>
+
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
